<resources>
    <string name="app_name">Assignment1</string>
    <string name="username">Username</string>
    <string name="username_hint">Between 6 and 12 characters</string>
    <string name="password">Password</string>
    <string name="password_hint">Between 9 and 20 characters</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="name_hint">Person Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Enter 11 numbers with out \'-\'</string>
    <string name="address">Address</string>
    <string name="address_hint">Enter Postal Address</string>
    <string name="term_of_service">Term of Service</string>
    <string name="term_of_service_text">We will provide their services to you, which are subject to the conditions stated below in this document. Every time you visit this website, use its services or make a purchase, you accept the following conditions. This is why we urge you to read them carefully.</string>
    <string name="term_of_service_agree">Agree</string>
    <string name="term_of_service_decline">Decline</string>
</resources>
