<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:labelFor="@id/sign_up_username"
            android:text="@string/username" />
        <EditText
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/username_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLength="12" />
        <TextView
            android:id="@+id/sign_up_username_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/transparent"
            android:textColor="@color/light_red"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:labelFor="@id/sign_up_password"
            android:text="@string/password" />
        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="20" />
        <TextView
            android:id="@+id/sign_up_password_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/light_red"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:labelFor="@+id/sign_up_name"
            android:text="@string/name" />
        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="20" />
        <TextView
            android:id="@+id/sign_up_name_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/light_red"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:labelFor="@id/sign_up_phone_number"
            android:text="@string/phone_number" />
        <EditText
            android:id="@+id/sign_up_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/phone_number_hint"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="11" />
        <TextView
            android:id="@+id/sign_up_phone_number_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/light_red"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:labelFor="@id/sign_up_address"
            android:text="@string/address" />
        <EditText
            android:id="@+id/sign_up_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/address_hint"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:maxLength="100" />
        <TextView
            android:id="@+id/sign_up_address_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/light_red"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/term_of_service"
            android:labelFor="@id/term_of_service_text" />

        <TextView
            android:labelFor="@id/term_of_service_agreement"
            android:id="@+id/term_of_service_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/term_of_service_text" />

        <RadioGroup
            android:id="@+id/term_of_service_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <RadioButton
                android:id="@+id/term_of_service_agree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/term_of_service_agree" />

            <RadioButton
                android:id="@+id/term_of_service_decline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/light_red"
                android:text="@string/term_of_service_decline"
                android:checked="true" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <Button
                android:id="@+id/sign_up_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/light_red"
                android:background="@android:color/transparent"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/sign_up_with_check"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@color/light_grey"
                android:padding="10dp"
                android:clickable="false"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>