<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="3"
    android:orientation="horizontal"
    android:verticalSpacing="1dp"
    android:horizontalSpacing="1dp"
    android:padding="1dp">

    <TextView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textSize="15sp" />
    <TextView
        android:layout_columnWeight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/profile_configure_username"
        android:layout_columnSpan="2"
        android:layout_marginEnd="30dp"
        android:textSize="15sp" />

    <TextView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textSize="15sp" />
    <TextView
        android:layout_columnWeight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/profile_configure_name"
        android:layout_columnSpan="2"
        android:layout_marginEnd="30dp"
        android:textSize="15sp" />

    <TextView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textSize="15sp" />
    <TextView
        android:layout_columnWeight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/profile_configure_phone_number"
        android:layout_columnSpan="2"
        android:layout_marginEnd="30dp"
        android:textSize="15sp" />

    <TextView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textSize="15sp" />
    <TextView
        android:layout_columnWeight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/profile_configure_address"
        android:layout_columnSpan="2"
        android:layout_marginEnd="30dp"
        android:textSize="15sp" />

    <TextView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textSize="15sp" />
    <EditText
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/profile_configure_password"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:maxLength="20"/>
    <Button
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/profile_configure_password_change"
        android:text="@string/change"
        android:layout_marginEnd="30dp"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/profile_configure_password_change_message"
        android:layout_columnWeight="2"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/light_red"
        android:layout_marginEnd="30dp"
        android:visibility="gone"/>
</GridLayout>